--- a/angular/src/app/presets-list/presets-list.component.html
+++ b/angular/src/app/presets-list/presets-list.component.html
@@ -1,8 +1,8 @@
 <div class="example-flex-container">
-  <div *ngIf="loading">Loading…</div>
+  <div *ngIf="presets === null && !error">Loading…</div>
   <div *ngIf="error" style="color:red">{{error}}</div>
 
-  <section *ngFor="let p of presets" class="preset-row">
+  <section *ngFor="let p of (presets || [])" class="preset-row">
     <div class="example-label">{{ p.name }}</div>
     <div class="example-button-row">
       <button class="action" [routerLink]="['/modifysampler', p.name]">Modifier</button>
